test/Fail/FunSort-X-Prop-SetOmega.err
FunSort-X-Prop-SetOmega.agda:6.13-18: error: [UnequalSorts]
Setω != funSort _3 Prop
when checking that the expression A → B has type Setω
